fix(SEO): Update metadata descriptions

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "faisha.dev",
   "private": true,
-  "description": "Faisha's personal site.",
+  "description": "Faisha Surjatin, CS undergrad and AR/VR developer in Melbourne.",
   "version": "0.1.0",
   "author": "Faisha Surjatin <faisha@faisha.dev>",
   "dependencies": {
